@@ -1,9 +1,14 @@
 2005-01-08  Olivier Chapuis  <olivier.chapuis@free.fr>
 
+	* fvwm/session.c (matchWin):
+	(SaveWindowStates):
+	On restarts compare window ids only. Base or matching decision on
+	window role only if we have a client id.
+
 	* fvwm/move_resize.c (GetOnePositionArgument):
 	Fixed a one pixel bug in the Move and AnimatedMove commands by rounding
 	float values to neast int
-	
+
 2005-01-06  Olivier Chapuis  <olivier.chapuis@free.fr>
 
 	* AUTHORS:
